syntax = "proto3";

package user;

option go_package = "/;user";

service UserService{
    rpc RegisterUser(RegisterRequest) returns (AuthResponse);
    rpc LoginUser(LoginRequest) returns (AuthResponse);
}

message RegisterRequest{
    string email = 1;
    string password = 2;
    string name = 3;
    string mobile = 4;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message AuthResponse{
    string user_id = 1;
    string message = 2;
    bool success = 3;
}